# IGD

./: .gitignore  README.md  main.py  plan.md  pyproject.toml
docs/: bellman.md  blackbox.md  evaluation.md  guide.md  inverse.md  lbo.md  synapse.md
src/core/: agent.py  designer.py  dopamine.py  experiment.py  lbo.py  metric.py  simulation.py
src/envs/: simple_combat.py
tests/: test.py
