[project]
name = "lb-igd"
version = "0.1.0"
description = "LB-IGD: Laplace–Beltrami Inverse Game Design (Faction Chess: designable pieces + map + obstacles)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markupsafe<3.0",
    "numpy<2.0",
    "torch==2.5.1+cu121",
    "tqdm<4.67.1",
]
